--- a/.emacs.files/init.org
+++ b/.emacs.files/init.org
@@ -262,6 +262,7 @@ See [[file:../.editorconfig][global editorconfig]] for more details.
 
 #+begin_src emacs-lisp :tangle yes
   (use-package editorconfig :delight
+    :init (setq editorconfig--enable-20210221-testing t) ; Enable the testing branch to work around a bug causing too many reloads. Need to be in :init as it must be set before the package loads.
     :config (editorconfig-mode t))
 #+end_src
 
@@ -319,21 +320,21 @@ Show the available next key bindings.
                "[/\\\\]vendor$"
                "[/\\\\]cli$"
                "[/\\\\]internal$"
-               "[/\\\\]e2e$"
                "[/\\\\]functions[/\\\\]migrations$"
                "[/\\\\]tests[/\\\\]mocks$"
+               "[/\\\\]\\.cache$"
                "[/\\\\]\\.gocache$"
                "[/\\\\]_archives$"
                "[/\\\\]node_modules$"
                ))
-    (lsp-prefer-flymake nil)                     ;; Disable flymake in favor of flycheck.
-    (lsp-eldoc-enable-hover nil)                 ;; Disable eldoc. Redundant with lsp-ui-doc.
-    (lsp-gopls-build-flags ["-tags=wireinject"]) ;; Use wire build tag.
-    :config
-    (lsp-register-custom-settings '(
-                                     ("gopls.completeUnimported" t t)
-                                     ("gopls.staticcheck" t t)
-                                     ))
+    (lsp-prefer-flymake nil)   ;; Disable flymake in favor of flycheck.
+    (lsp-eldoc-enable-hover t) ;; Disable eldoc. Redundant with lsp-ui-doc.
+    ;(lsp-gopls-build-flags ["-tags=wireinject"]) ;; Use wire build tag.
+    ;:config
+    ;(lsp-register-custom-settings '(
+    ;                                 ("gopls.completeUnimported" t t)
+    ;                                 ("gopls.staticcheck" t t)
+    ;                                 ))
     (use-package lsp-ui ;; Overlay UI components for LSP.
       :preface
       (defun creack/toggle-lsp-ui-doc ()
@@ -346,9 +347,8 @@ Show the available next key bindings.
 
       :custom
       (lsp-ui-doc-position       'top)
-      (lsp-ui-doc-header         nil)
+      (lsp-ui-doc-header         t)
       (lsp-ui-doc-use-childframe t)
-      (lsp-ui-doc-use-webkit     t)
       (lsp-ui-doc-enable         t)
 
       :bind
@@ -642,7 +642,7 @@ When programming I like my editor to try to help me with keeping parentheses bal
 Highlight parens etc. for improved readability.
 
 #+begin_src emacs-lisp :tangle yes
-  (use-package rainbow-delimiters
+  (use-package rainbow-delimiters :delight
     :hook (prog-mode . rainbow-delimiters-mode))
 #+end_src
 
@@ -684,16 +684,34 @@ Display line changes in gutter based on git history. Enable it everywhere.
   ;  :config (global-git-gutter-mode t))
 #+end_src
 
-** Syntax checking
+** TODO Syntax checking
+
+TODO: Cleanup shellcheck.
 
 =Flycheck= is a general linter framework which other packages hook into. It's an improvment on the built in =flymake=.
 
 #+begin_src emacs-lisp :tangle yes
   (use-package flycheck
+    :ensure-system-package
+    (shellcheck . "echo 'Missing shellcheck binary.' >&2; exit 1")
+    :custom
+    (flycheck-check-syntax-automatically '(save mode-enabled))
     :bind
-    ("C-c <up>"   . flycheck-next-error)      ; Ctrl-up   to go to next error.
-    ("C-c <down>" . flycheck-previous-error)) ; Ctrl-down to go to previous error.
+    ("C-c <up>"   . flycheck-next-error)     ; Ctrl-c up   to go to next error.
+    ("C-c <down>" . flycheck-previous-error) ; Ctrl-c down to go to previous error.
+    :init
+    ;; From https://www.flycheck.org/en/28/_downloads/flycheck.html (search for "shellcheck").
+    (flycheck-define-checker sh-shellcheck ; Create a custom checker for shellcheck.
+      "A shell script syntax and style checker using Shellcheck."
+      :command ("shellcheck" "-f" "checkstyle" "-s" (eval (symbol-name sh-shell)) source)
+      :modes sh-mode
+      :error-parser flycheck-parse-checkstyle)
+    :hook sh-mode ; Enable flycheck in sh-mode.
+    )
 #+end_src
+
+#+RESULTS:
+: flycheck-previous-error
 
 ** Snippets
 
@@ -723,6 +741,7 @@ Common config file formats.
 #+begin_src emacs-lisp :tangle yes
   (use-package ini-mode :defer)
   (use-package ssh-config-mode :defer)
+  (use-package nginx-mode :defer)
   (use-package conf-mode :defer
     :mode (("\\.conf\\'"    . conf-space-mode)
            ("\\.setup.*\\'" . conf-space-mode)))
@@ -820,13 +839,78 @@ Install the major mode for protobuf and set the basic code style.
     (protobuf-mode . yas-minor-mode))
 #+end_src
 
-** Terraform
+** TODO Terraform
+
+TODO: Setup terraform-doc and company-terraform packages.
 
 Enable Terraform major mode with snippet support.
 
 #+begin_src emacs-lisp :tangle yes
   (use-package terraform-mode :defer
-    :hook (terraform-mode . yas-minor-mode))
+    :hook
+    (terraform-mode . yas-minor-mode)
+    (terraform-mode . terraform-format-on-save-mode)
+    )
+#+end_src
+
+** TODO Javascript / Typescript
+
+TODO: Document this.
+
+#+begin_src emacs-lisp :tangle
+(use-package tide
+  :ensure-system-package
+  (tsserver . "source ~/.nvm/nvm.sh && nvm use --lts")
+  :after (web-mode company flycheck prettier)
+  :preface
+  (defun setup-tide-mode ()
+    (tide-setup)
+    (tide-hl-identifier-mode +1) ; Needs to run after the setup. Can't be a hook.
+    )
+  :custom
+  (tide-completion-detailed t)
+  :config
+  (flycheck-add-next-checker 'javascriptt-tide 'javascript-eslint 'append)
+  (flycheck-add-next-checker 'typescript-tide 'javascript-eslint 'append)
+  (flycheck-add-next-checker 'tsx-tide 'javascript-eslint 'append)
+  (flycheck-add-next-checker 'jsx-tide 'javascript-eslint 'append)
+  :hook
+  (tide-mode . flycheck-mode)
+  (tide-mode . eldoc-mode)
+  )
+
+(use-package js2-mode
+  :mode "\\.js$"
+  :custom
+  (js2-global-externs (list "window" "module" "require" "buster" "sinon" "assert" "refute" "setTimeout" "clearTimeout" "setInterval" "clearInterval" "location" "__dirname" "console" "JSON" "jQuery" "$"))
+  :hook
+  (js2-mode . setup-tide-mode)
+  )
+
+(use-package typescript-mode
+  :ensure-system-package
+  (tsc . "source ~/.nvm/nvm.sh && nvm use --lts")
+  :mode "\\.ts$"
+  :hook
+  (typescript-mode . setup-tide-mode)
+  )
+
+
+(use-package web-mode
+  :after flycheck
+  :mode "\\.[tj]sx?$"
+  :config
+  (flycheck-add-mode 'javascript-eslint 'web-mode)
+  :hook
+  (web-mode . setup-tide-mode)
+  )
+
+(use-package prettier :delight
+  :ensure-system-package
+  (prettier . "source ~/.nvm/nvm.sh && nvm use --lts")
+  :config
+  (global-prettier-mode t)
+  )
 #+end_src
 
 ** TODO Golang
@@ -871,7 +955,7 @@ Go setup.
       "Save any unsaved buffers and compile."
       (interactive)
       (save-some-buffers t)
-      (compile "go test -v -cover -coverprofile=/tmp/coverprofile -covermode=count")
+      (compile "go test -v -failfast -cover -coverprofile=/tmp/coverprofile -covermode=count")
       )
 
     :bind
@@ -1096,13 +1180,14 @@ Export to Github Flavored Markdown.
 #+end_src
 
 * TODO Extra
-** Record key frequency
+** TODO Record key frequency
+
+TODO: Auto enable.
 
 Keep track of what gets used so we can drop unused features.
 
 #+begin_src emacs-lisp :tangle yes
   (use-package keyfreq
-    :commands keyfreq
     :config
     (keyfreq-mode t)
     (keyfreq-autosave-mode t))
